# routers/login_router.go
@@ -1,0 +1,13 @@
+package routers
+
+import (
+	"github.com/gin-gonic/gin"
+	"gvb_server/api"
+)
+
+func LoginRouter(router *gin.RouterGroup) {
+
+	loginApi := api.ApiGroupApp.LoginApi
+	router.POST("/email_login", loginApi.EmailLoginView)
+
+}
